@@ -54,6 +54,8 @@ SVN trunk:
    * campaign_list response now contains information about translations
  * utils: added weblist.pl and webtgz.pl web interface programs
    * updated weblist.pl to display translation information
+   * updated weblist.pl and webtgz.pl to use standard wesnoth logo banner
+   * updated webtgz.pl to request campaign info only for the campaign of interest
  * fix untranslated unit create dialog (#4424)
  * random map generator now uses island_size (#4458)
  * various bug fixes and code cleanups
